--- a/document/03-musical-parameters.Rmd
+++ b/document/03-musical-parameters.Rmd
@@ -1,5 +1,14 @@
 # Computation Chapter
 
+--- ISMIR 
+; symbolic music processing
+; computational music theory and musicology
+; cognitive MIR
+; datasets 
+; evaluation beyond just notes
+; training and education application
+---
+
 ## Rationale
 
 Music theorists use their pedagogical intutions to build the appropriate curricula for their aural skills pedagogy.
@@ -129,55 +138,80 @@ In order to have more phenomenologically approriate model that incorporates comp
 
 ### Dynamic 
 
-What is IDyOM
-How is it related to MD
-SLH PPH
-What is it good at, yes expectations. look at all this literature
-But what about memory!
-accd to Pereceptual fluency hyptthessis which states......
-expose to patterns means better processing
-infact see this with people learning things implicilty (light learning task from reading in On Repaat)
-Rohehimer and margulis citations
+The Information Dynamic of Muscic (IDyOM) model of Marcus Pearce is a computational model of auditory cognition that ... PEARCE 2018.
+Unlike measures from FANTASTIC, that calculate summary statistics on melodies, IDyOM works by....
+As mentioned in Chapter 1, IDyOM is based both on the SLH and PPH.
+THey state....
+Due to the fact that IDyOM makes its calculations based on a series of n-grams that the model learns, IDyOM is able to output measures of expectedness for each symbolic token used in its calculations.
+As a model, IDyOM has been sucessful at modeling....
+The findings are robust, yet the measures of information content based on Shannon entropy have yet to be used to actually quantify memory (even ala Miller 1956).
 
-If true, repeatitive stimuli are then easier to processly
+Using measures of IC from IDyOM is a novel application of the IDyOM model, but makes sense.
+Literature from sequential learning notes that much of our learning for materials happens implicitly
+This happens from both langauge and music.
+Roherhimer reference
+Margulis reference
+
+If true, repeatitive stimuli are then easier to processly as they are going to tax memory less.
 Lking aslo follow that IC measures of expctedness (if we assume expct are easier ot procecss) can be used in memory measure
-Floow that n grams proccedss reelative to their frequncy distrituion in a corpus.
-In turn they should also have lower IC.
+
+Take for example the following two 8grams
+THey are listed with their informaiton contnet.
+One is the opening of this tune
+The other is this really famous tone row
+
+## Frequency Facilitation Hypothesis
+
+Can see that both are sequences of eight notes, but one consists of more predictiable notes.
+Can model this in terms of information content and as information accumulates over the phrase.
+Intutivly, returning to logic from above, one will be easier to remember and dictate.
+And This is due to processing fluency, thus less of a tax on memory.
+So I am saying that you can use the IC measures of informaiton as actul measures of information.
+
+More formally, the evidence can be summerized in what I am calling DFH.
+Which states:
+
+> 1. some sequences are easier to process, means they are more expected.
+2. IC measures of expectancy can be used as prox for memory
+3. Given sequence of N lenght melody, ease of dication which is loads on memory is relative to its degree of expectedness in IC and link it back to corpus by saying that it is relative to it's n-gram distribution frequency.
+
+
+From this hypothesis, we derrive a couple of testiable predciitions that we can continue to
+use tools from computational musicology and subsequestntly music psychology to answer.
+
+### Distributional Patterns in Corpus
+
+If this is true, we should see this again throughotu the corpus 
+And If IC measures can be used as memory proxy bc of processing due to SLH and PPH, would follow that n-grams woudl be processed relative to their distribution in a corpus.
+And they will have lower IC.
 To show this I extract out of a corpus of 2 3 5 10 grams form both sides of frequency distribution of a corpus to present side by side show intuitive.
-this is obvious
 
 we can also plot this continously 
+
+### Memory Facilitation 
+
+Predictions here OR add in mini experiment that will be test for ISMIR paper.
 
 go for further psychology experiemnts in this, 
 lays basis for the computational model
 and more direct pedagogical applicaitons are discussed below
 
 
-## Distributional Frequency Hypothesis
-
-### Distributional Patterns in Corpus
-
-### Perceptual Theories of Implicit Learning
-
-* Implict Reviews 
-* SLH
-* PPH
-* PFH
-* EE Literature?
-
-### Logical Argument
-
-1. some sequences are easier to process, means they are more expected.
-2. IC measures of expectancy can be used as prox for memory
-3. Given sequence of N lenght melody, ease of dication which is loads on memory is relative to its degree of expectedness in IC and link it back to corpus by saying that it is relative to it's n-gram distribution frequency.
-
-Predictions that this would give.
-Maybe small huron-y evidence to suppor this?
-
 ### Peagogical applcation
 
 Here is how you would do it pedagoically
-I list the melodies at the back.
+If this is case, would mean that this is a new way to organize melodies in book.
+Could instead list all melodies and have them as snippets.
+Orgnize them like books in terms of ascending difficulty.
+And this is how i have done it.
+Samples from all the n-grams in this table
+
+TABLE
+
+Can find all the things in the back.
+Would suggest learning these patterns as supplment to melody learning.
+It would do the following things.
+I list melodies in the back.
 I would predict that if people learned this as supplment, they would do a lot better.
 Also get rid of some sort of performance anxiety in little successes.
 
@@ -194,23 +228,7 @@ I argue that using this smaller, snippit approach, will allow students to not be
 I finish by disucssiong how this might be implemented in the classroom.
 
 
-The point of this chapter is to show you can use tools from computational musicology as predictive features of melodies in experiments. 
-
-* Comp linguistics and information theory
-* Get featuers from thigns like FANTASTIC
-* How they can be used in experiemnts eventually 
-
-Thesis: Measures from computational musicology can be helpful in pedagogical setting. First talk about background and basics before, then add in a section about perceptual fluency via statistical learning and how a corpus and computational model of auditory cognition can help serve that purpose, then if IC is a good measure, how that will lend itself to better ways of student success (and that we only got to this via a computational data drive approach)
-
-As discussed in literature review, people have found ways to measure melodies with computers.
-Can do this just with the melody itself.
-Can do this with melody and other melodies in context.
-And this too has been done in the music pedagogy world.
-
-I am saying that there's alink between what is on page and perception that music theory ped can take advantage of
-
-
-OTHER PEOPLE WHO HAVE DONE THIS
+THER PEOPLE WHO HAVE DONE THIS
 
 * look into Wiggins et al., 1993, for history of representation 
 
